Set up javafx. Next up, setting up interfaces for all classes