@@ -5,3 +5,9 @@ A javafx GUI dashboard that displays and allows manipulation of csv data about m
 theohornung
 esimonen
 aderocherwisco
+
+## Dev Setup:
+git clone this repo
+set run configurations in eclipse to
+
+*--module-path "path\to\javafxsdk\lib" --add-modules javafx.controls,javafx.fxml,javafx.graphics*
